--- a/src/main/resources/templates/course/detail.html
+++ b/src/main/resources/templates/course/detail.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Detail Kursus - Udehnih</title>
-    <script
-        src="https://cdn.tailwindcss.com/3.4.3"
-        integrity="sha384-Uq3Xg6crV4gsltwvwmef5Oib81eugE2U4w67JC+FwraP+bYHQL8ieY0Km1rYWk9b"
-        crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-teal-50 text-gray-800">
@@ -277,7 +273,7 @@
                     loadUserEnrollments(courseId);
                 } else if (res.status === 401) {
                     alert('Anda harus login terlebih dahulu.');
-                    window.location.href = '/login';
+                    window.location.href = '/auth/login';
                 } else {
                     return res.json().then(data => Promise.reject(data.message || 'Gagal mendaftar kursus.'));
                 }
