--- a/src/main/resources/templates/course/tutor_applicant.html
+++ b/src/main/resources/templates/course/tutor_applicant.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Status Pendaftaran Tutor | Udehnih</title>
-  <script
-    src="https://cdn.tailwindcss.com/3.4.3"
-    integrity="sha384-Uq3Xg6crV4gsltwvwmef5Oib81eugE2U4w67JC+FwraP+bYHQL8ieY0Km1rYWk9b"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-teal-50 min-h-screen">
   <div th:insert="~{navbar :: navbar}"></div>
