--- a/src/main/resources/templates/course/detail.html
+++ b/src/main/resources/templates/course/detail.html
@@ -291,6 +291,9 @@
                     return response.text().then(text => { 
                         throw new Error(text || 'Gagal mendaftar'); 
                     });
+                } else if (res.status === 401) {
+                    alert('Anda harus login terlebih dahulu.');
+                    window.location.href = '/auth/login';
                 } else {
                     throw new Error('Gagal mendaftar ke kursus');
                 }
